# swiss-statistics-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  README_EN.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
audits/2026-05-20T033454-Z-swiss-statistics-mcp/: audit-meta.json  audit-report.md  profile.yaml  summary.json  verification-results.json
audits/2026-05-20T033454-Z-swiss-statistics-mcp/findings/: ARCH-005-string-not-structured-output.md  ARCH-009-truncation-not-machine-readable.md  OBS-001-no-logging-infrastructure.md  OBS-002-no-structured-logging.md  OBS-003-no-metrics.md  OBS-004-catch-all-exception-handling.md  OPS-001-no-security-scanners-in-ci.md  OPS-003-no-phased-rollout-policy.md  SCALE-002-no-retry-backoff.md  SCALE-003-metadata-not-cached.md  SCALE-004-no-concurrent-fanout.md  SDK-004-streamable-http-no-origin-check.md  SEC-008-table-id-no-regex.md  SEC-014-no-logging.md  SEC-018-no-rate-limit-no-retry.md  SEC-022-error-message-leakage.md
audits/2026-05-20T033454-Z-swiss-statistics-mcp/raw/: ARCH-001.txt  ARCH-003.txt  ARCH-output.txt  ARCH-overview.txt  ARCH-structure.txt  CH-004.txt  OBS-overview.txt  OPS-overview.txt  OPS-tests.txt  SCALE-overview.txt  (+10 more)
audits/2026-05-20T044515-Z-swiss-statistics-mcp/: applicability.json  audit-meta.json  audit-report.md  catalog.json  release-notes-v0.2.0.md  summary.json  verification-results.json
src/swiss_statistics_mcp/: __init__.py  server.py
tests/: test_server.py
(+6 files in other folders)
