[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-statistics-mcp"
version = "0.1.0"
description = "MCP server for Swiss Federal Statistical Office (BFS) data via STAT-TAB PxWeb API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "bfs",
    "swiss-statistics",
    "stat-tab",
    "pxweb",
    "switzerland",
    "open-data",
    "education",
    "demographics",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[project.scripts]
swiss-statistics-mcp = "swiss_statistics_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_statistics_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
